# JsonAnalysis

./: CMakeLists.txt  DNode.h  DoubleLinkedLinearList.h  JSONObject.cpp  JSONObject.h  LinearList.h  Node.h  Queue.h  README.md  SimpleLinearList.h  Stack.h  main.cpp
structure/: DNode.h  DoubleLinkedLinearList.cpp  DoubleLinkedLinearList.h  LinearListOperator.h
